--- a/QQStudent/QQStudent/QQStudent-Info.plist
+++ b/QQStudent/QQStudent/QQStudent-Info.plist
@@ -14,25 +14,9 @@
 		<string>icon@2x.png</string>
 	</array>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>Icon-80</string>
-				<string>Icon-58</string>
-				<string>Icon-29</string>
-				<string>logo_80</string>
-				<string>logo_58</string>
-				<string>logo_29</string>
-				<string>Icon-120</string>
-				<string>Icon</string>
-				<string>logo_120</string>
-				<string>icon.png</string>
-				<string>icon@2x.png</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>com.qq.student</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -42,7 +26,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>2.5.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -59,7 +43,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>2.5.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
