--- a/QQStudent/QQStudent/QQStudent-Info.plist
+++ b/QQStudent/QQStudent/QQStudent-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
 	<string>轻轻家教学生版</string>
 	<key>CFBundleExecutable</key>
